<resources>
    <string name="app_name">EUVB Monitor</string>
    <string name="app_version">0.1.0</string>

    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="is_serial">Serial Present:</string>
    <string-array name="roygbiv">
        <item >Red</item>
        <item >Green</item>
        <item >Blue</item>
    </string-array>
    <string name="button">Send</string>
    <string name="red_slide">Red</string>
    <string name="blue_slide">Blue</string>
    <string name="green_slide">Green</string>

    <string name="sys_ble_not_supported">This Device does not support BLE.</string>
    <string name="sys_bluetooth_not_supported">This Device does not support Bluetooth.</string>

    <string name="action_settings">Settings</string>

    <string name="section_format">Hello World from section: %1$d</string>

    <string name="ac_devicelist_title">BLE Device List</string>
    <string name="ac_devicelist_unknown">Unknown Device</string>

    <string name="fc_caption1">Date Time</string>
    <string name="fc_caption2">Current EUVB</string>
    <string name="fc_caption3">Current UV Index</string>

    <string-array name="tab_title">
        <item>Current</item>
        <item>Vitamin D</item>
        <item>Account</item>
    </string-array>

    <string name="fv_caption1">Vitamin D Synthetic Amount</string>
    <string name="fv_caption2">Before Reaching Daily Vitamin D Amount</string>
    <string name="fv_caption3">Status</string>

    <string name="fa_daily_Resolution_caption">
        Daily Resolution\nof Vitamin D
    </string>

</resources>
