<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainframe">

    <!-- values are based on 150515 tocon e2 data -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:id="@+id/vitd_sum">

        <TextView
            android:id="@+id/clock_caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:text="@string/fv_caption1"/>

        <TextView
            android:id="@+id/tvVitd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="354.1 IU"
            android:textStyle="bold"
            android:textSize="40sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_below="@+id/vitd_sum"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:id="@+id/info">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/fv_caption2"/>

        <TextView
            android:id="@+id/tvExposureTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/fc_txtSize_EUVB"
            android:textStyle="bold"
            android:text="11 Min."/> <!-- 11m 31s-->

    </LinearLayout>

    <TextView
        android:id="@+id/chart_caption"
        android:layout_below="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/fv_caption3"/>

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/chart"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_below="@+id/chart_caption"/>


</RelativeLayout>
